compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__clause_guards31.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 337
expression: "\npub fn main(args) {\n  case args {\n    [x] | [x, _] if x -> 1\n    _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(list(boolean())) -> integer().
main(Args) ->
    case Args of
        [X] when X ->
            1;

        [X, _] when X ->
            1;

        _ ->
            0
    end.
