compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__clause_guards_10.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  let x = 0.123\n  case x {\n    _ if x == 3.14 -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let x = 0.123
  case x {
    _ if x == 3.14 -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> integer().
main() ->
    X = 0.123,
    case X of
        _ when X =:= 3.14 ->
            1;

        _ ->
            0
    end.
