compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__clause_guards_2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main(args) {\n  case args {\n    x if x && x || x == x && x -> 1\n    _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(boolean()) -> integer().
main(Args) ->
    case Args of
        X when (X andalso X) orelse ((X =:= X) andalso X) ->
            1;

        _ ->
            0
    end.
