compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__clause_guards_4.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 62
expression: "\npub fn main() {\n  case 1, 0 {\n    x, y if x >= y -> 1\n    _, _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> integer().
main() ->
    case {1, 0} of
        {X, Y} when X >= Y ->
            1;

        {_, _} ->
            0
    end.
